<resources>
    <string name="app_name">NewsApp</string>
    <string name="no_network">Internet Not Connected</string>
    <string name="no_response">Something went wrong</string>
    <string name="swipe_refresh">Swipe down to Refresh</string>
    <string name="ok">OK</string>

    <string name="pref_mode_title">Dark Mode</string>
    <string name="pref_summary_off">Disabled</string>
    <string name="pref_summary_on">Enabled</string>

    <string name="pref_drop_down_country_title">Country</string>
    <string name="pref_drop_down_language_title">Language</string>

    <string name="pref_country_key">country</string>
    <string name="pref_language_key">language</string>
    <string name="pref_ui_mode_key">uimode</string>

    <!--    PREFERENCES COUNTRY LABELS-->
    <string name="pref_country_any_label">All</string>
    <string name="pref_country_us_label">United States</string>
    <string name="pref_country_pk_label">Pakistan</string>
    <string name="pref_country_jp_label">Japan</string>
    <string name="pref_country_in_label">India</string>
    <string name="pref_country_cn_label">China</string>

    <!--    PREFERENCES LANGUAGE LABELS-->
    <string name="pref_lang_english_label">English</string>
    <string name="pref_lang_hindi_label">Hindi</string>
    <string name="pref_lang_japanese_label">Japanese</string>
    <string name="pref_lang_chinese_label">Chinese</string>
    <string name="pref_lang_arabic_label">Arabic</string>

    <!--    PREFERENCES COUNTRY VALUES-->
    <string name="pref_country_any_values">any</string>
    <string name="pref_country_us_values">us</string>
    <string name="pref_country_pk_values">pk</string>
    <string name="pref_country_jp_values">jp</string>
    <string name="pref_country_in_values">in</string>
    <string name="pref_country_cn_values">cn</string>

    <!--    PREFERENCES LANGUAGE VALUES-->
    <string name="pref_lang_english_values">en</string>
    <string name="pref_lang_hindi_values">hi</string>
    <string name="pref_lang_japanese_values">ja</string>
    <string name="pref_lang_chinese_values">jh</string>
    <string name="pref_lang_arabic_values">ar</string>
    <string name="label_settings_activity">Settings</string>
    <string name="label_settings_menu_item">Settings</string>

</resources>