<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="@bool/pref_mode_default"
        android:key="@string/pref_ui_mode_key"
        android:summaryOff="@string/pref_summary_off"
        android:summaryOn="@string/pref_summary_on"
        android:title="@string/pref_mode_title" />

    <DropDownPreference
        android:defaultValue="@string/pref_country_any_values"
        android:entries="@array/pref_country_entries"
        android:entryValues="@array/pref_country_values"
        android:key="@string/pref_country_key"
        android:title="@string/pref_drop_down_country_title" />

    <DropDownPreference
        android:defaultValue="@string/pref_lang_english_values"
        android:entries="@array/pref_language_entries"
        android:entryValues="@array/pref_language_values"
        android:key="@string/pref_language_key"
        android:title="@string/pref_drop_down_language_title" />

</PreferenceScreen>